--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,20 @@
+@import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800;900&display=swap");
+/* 
+#161b33
+#0077b6
+#6B6B6B
+#00b4d8
+#90e0ef
+#caf0f8
+*/
 :root {
-  font-family: Inter, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  font-family: "Montserrat", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   color-scheme: light dark;
-  color: rgba(255, 255, 255, 0.87);
-  background-color: #242424;
+  color: #caf0f8;
+  background-color: #161b33;
 
   font-synthesis: none;
   text-rendering: optimizeLegibility;
@@ -23,11 +32,10 @@ a:hover {
 }
 
 body {
-  margin: 0;
-  display: flex;
-  place-items: center;
+  margin: 10px;
   min-width: 320px;
   min-height: 100vh;
+  overflow-x: hidden;
 }
 
 h1 {
@@ -42,9 +50,10 @@ button {
   font-size: 1em;
   font-weight: 500;
   font-family: inherit;
-  background-color: #1a1a1a;
   cursor: pointer;
   transition: border-color 0.25s;
+  background-color: #6b6b6b;
+  color: #caf0f8;
 }
 button:hover {
   border-color: #646cff;
@@ -54,15 +63,23 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
-    color: #213547;
-    background-color: #ffffff;
+    color: #161b33;
+    background-color: #caf0f8;
   }
   a:hover {
     color: #747bff;
   }
   button {
-    background-color: #f9f9f9;
+  }
+} */
+
+@media screen and (max-width: 768px) {
+  body {
+    overflow-x: hidden;
+  }
+  h1 {
+    font-size: 2.5em;
   }
 }
