--- a/src/pages/CreateVenuePage/CreateVenuePage.css
+++ b/src/pages/CreateVenuePage/CreateVenuePage.css
@@ -1,4 +1,4 @@
-.create-event-page-container {
+.create-venue-page-container {
   display: flex;
   position: relative;
   height: 100vh;
@@ -22,7 +22,7 @@
 .back-btn i {
   font-size: 2rem;
 }
-.create-event-form {
+.create-venue-form {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -33,7 +33,7 @@
   padding: 1rem;
 }
 
-.form-group {
+.form-control {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -43,11 +43,11 @@
   margin: 1rem 0;
 }
 
-.form-group label {
+.form-control label {
   font-size: 1.5rem;
   margin-bottom: 0.5rem;
 }
-.form-group input {
+.form-control input {
   width: 100%;
   padding: 0.5rem;
   font-size: 1.5rem;
@@ -56,7 +56,7 @@
   outline: none;
   background-color: #161b33;
 }
-.form-group textarea {
+.form-control textarea {
   width: 100%;
   padding: 0.5rem;
   font-size: 1.5rem;
@@ -65,7 +65,7 @@
   outline: none;
   background-color: #161b33;
 }
-.form-group select {
+.form-control select {
   width: 100%;
   padding: 0.5rem;
   font-size: 1.5rem;
@@ -73,7 +73,7 @@
   border-radius: 5px;
   outline: none;
 }
-.form-group button {
+.form-control button {
   width: 100%;
   padding: 0.5rem;
   font-size: 1.5rem;
@@ -82,7 +82,7 @@
   cursor: pointer;
   outline: none;
 }
-.event-preview {
+.venue-preview {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -92,7 +92,7 @@
   padding: 1rem;
 }
 
-.event-preview-content {
+.venue-preview-content {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -101,17 +101,7 @@
   width: 100%;
   height: 100%;
 }
-.event-preview-cover {
-  width: 100%;
-  height: 50%;
-  border-radius: 5px;
-}
-.event-preview-cover img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
-.event-preview-images {
+.venue-preview-images {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -122,13 +112,13 @@
   max-height: 30%;
   overflow-x: scroll;
 }
-.event-preview-image {
+.venue-preview-image {
   width: 250px;
   height: 250px;
   border-radius: 5px;
 }
 
-.event-preview-image img {
+.venue-preview-image img {
   width: 100%;
   height: 100%;
   object-fit: cover;
