--- a/src/pages/AllEventsPage/AllEventsPage.css
+++ b/src/pages/AllEventsPage/AllEventsPage.css
@@ -6,3 +6,16 @@
   margin-top: 20px;
   height: 100vh;
 }
+.back-btn {
+  position: absolute;
+  top: 0;
+  left: 0;
+  margin: 1rem;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.back-btn i {
+  font-size: 2rem;
+}
