--- a/src/components/UI/EventGridCard/EventGridCard.css
+++ b/src/components/UI/EventGridCard/EventGridCard.css
@@ -1,7 +1,7 @@
 .event-grid-card {
   display: flex;
   width: 250px;
-  height: 450px;
+  max-height: 450px;
   flex-direction: column;
   justify-content: center;
   align-items: center;
@@ -14,7 +14,7 @@
 .event-grid-card-image img {
   width: 100%;
   height: 100%;
-  object-fit: cover;
+  object-fit: contain;
 }
 
 @media screen and (max-width: 768px) {
