--- a/src/pages/CreateVenuePage/CreateVenuePage.css
+++ b/src/pages/CreateVenuePage/CreateVenuePage.css
@@ -72,6 +72,7 @@
   border: 1px solid #000;
   border-radius: 5px;
   outline: none;
+  background-color: #161b33;
 }
 .form-control button {
   width: 100%;
